# enigma

./: Cargo.toml  LICENSE  README.md
benches/: perf.rs
frontend/: package-lock.json  package.json
frontend/pages/: index.tsx
frontend/src-tauri/: tauri.conf.json
lib/src/: enigma.rs  lib.rs
src/: cipher.rs  common.rs  enigma.rs  interface.rs  main.rs  plugboard.rs  reflector.rs  rotor.rs
