[package]
name = "libenigma"
version = "1.0.1"
edition = "2021"
authors = ["Brandon Piña"]
description = "A library for simulating an Enigma Machine"
license = "MIT"
repository = "https://github.com/ThatNerdUKnow/enigma"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bruh_moment = "0.1.1"
clap = { version = "4.0.18", features = ["derive"] }
inquire = "0.4.0"
itertools = "0.10.3"
nohash-hasher = "0.2.0"
rand = "0.8.5"
rayon = "1.5.3"
serde = {version="1.0.147", features = ["derive"]}
serde_yaml = "0.9.14"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "perf"
harness = false
